--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,15 @@ version: '3'
 
 services:
   app:
-    container_name: debian-bookworm
-    image: bookworm  
-    privileged: true
+    container_name: etup-enviroment
+    image: etup-enviroment  
     tty: true
     volumes:
       - .:/app
     build:
       context: ./
       dockerfile: ./Dockerfile
+
+  
 
 
