--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,8 @@ docker-build:
   #   - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   # # All branches are tagged with $DOCKER_IMAGE_NAME (defaults to commit ref slug)
   # # Default branch is also tagged with `latest`
-  # script:
-  #   - docker build --pull -t "$DOCKER_IMAGE_NAME" .
+  script:
+    docker build . --file Dockerfile --tag my-image-name:$(date +%s)
   #   - docker push "$DOCKER_IMAGE_NAME"
   #   - |
   #     if [[ "$CI_COMMIT_BRANCH" == "$CI_DEFAULT_BRANCH" ]]; then
@@ -31,6 +31,7 @@ docker-build:
   #     fi
   # Run this job in a branch where a Dockerfile exists
   rules:
-    # - if: $CI_COMMIT_BRANCH
+    - if: $CI_COMMIT_BRANCH
       exists:
         - Dockerfile
+
