Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,9 @@
 
 docker-build:
   # # Use the official docker image.
-  # image: docker:cli
-  # stage: build
-  # services:
+  image: docker:cli
+  stage: build
+  services:
   #   - docker:dind
   # variables:
   #   DOCKER_IMAGE_NAME: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
