--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     tty: true
     volumes:
       - .:/app
+      - ./config:/root/.config/setup-enviroment/
     build:
       context: ./
       dockerfile: ./Dockerfile
