--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   app:
     container_name: setup-enviroment-app
@@ -7,20 +5,24 @@ services:
     tty: true
     volumes:
       - .:/app
-      - ./config:/root/.config/setup-enviroment/
+      - ./config:/root/.config/setup-enviroment
     build:
       context: ./
       dockerfile: ./Dockerfile
       target: app
 
-  test:
+  tests:
     container_name: setup-enviroment-test
     image: setup-enviroment-test
+    env_file:
+      - .env
     tty: true
     volumes:
       - .:/app
     build:
       context: ./
       dockerfile: ./Dockerfile
-      target: test
+      target: tests
+      args:
+        - DOCKER_USER_UID=${DOCKER_USER_UID}
 
