--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,5 +24,5 @@ services:
       dockerfile: ./Dockerfile
       target: tests
       args:
-        - DOCKER_USER_UID=${DOCKER_USER_UID}
+        - DOCKER_USER_UID=1000
 
