--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -7,6 +7,8 @@ jobs:
   test:
     name: Run test suite
     runs-on: ubuntu-latest
+    environment:
+      name: DOCKER_USER_UID
 
     steps:
     - name: Checkout code
