--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -7,15 +7,10 @@ jobs:
   test:
     name: Run test suite
     runs-on: ubuntu-latest
-    environment:
-      name: DOCKER_USER_UID
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Build docker images
-      run: docker-compose build
-
     - name: Run tests
-      run: docker-compose run test
+      run:  docker compose run --rm tests --format documentation
