--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -13,4 +13,4 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run tests
-      run:  docker compose run --rm tests --format documentation
+      run:  docker compose run --rm tests --
