--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -7,12 +7,10 @@ jobs:
   test:
     name: Run test suite
     runs-on: ubuntu-latest
-      working-directory: ./app
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Run tests
-      run:  docker compose run --rm tests --
-        working-directory: ./app
+      run:  docker compose run --rm tests --format documentation
