--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,13 +8,18 @@ services:
     build:
       context: ./
       dockerfile: ./Dockerfile
+      target: app
 
   tests:
     container_name: setup-enviroment-test
-    image: jacksonbicalho/shellspec-kcov:latest
-    # env_file:
-    #   - .env
+    image: setup-enviroment-test
+    env_file:
+      - .env
     tty: true
     volumes:
       - .:/app
+    build:
+      context: ./
+      dockerfile: ./Dockerfile
+      target: tests
 
