--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -16,4 +16,4 @@ jobs:
       run: docker-compose build
 
     - name: Run tests
-      run: docker compose run --rm tests --
+      run: docker-compose run tests
