--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Create dir
         run: |
           mkdir -p /app/logs
+        run: |
           mkdir -p /app/coverage
 
     steps:
