--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Create dir
       run: |
-        mkdir -p /app/logs && mkdir -p /app/coverage
+        mkdir -p ./logs && mkdir -p ./coverage
 
     - name: Run tests
       run: docker-compose run shellspec --kcov
