--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build docker images
-      run: docker-compose build
+      run: docker-compose build shellspec
 
     - name: Create dir
       run: |
