--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -20,4 +20,9 @@ jobs:
         mkdir -p ./logs && mkdir -p ./coverage
 
     - name: Run tests
-      run: docker-compose run shellspec --kcov
+      run: docker-compose run --rm \
+        shellspec  --kcov \
+        --format d \
+        --kcov \
+        --reportdir report \
+        --output documentation
