--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -3,6 +3,11 @@ on:
   pull_request:
   push: { branches: master }
 
+
+defaults:
+ run:
+  working-directory: ./app
+
 jobs:
   test:
     name: Run test suite
