--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build docker images
-      run: docker-compose build shellspec --no-cache
+      run: docker-compose build
 
     - name: Run tests
       run: docker-compose run --rm -u root shellspec --kcov --format d --reportdir report --output documentation
