--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -16,4 +16,4 @@ jobs:
       run: docker-compose build
 
     - name: Run tests
-      run: ./tests.sh
+      run: docker-compose run --rm -u root shellspec --kcov --format d --reportdir report --output documentation
