--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   test:
-    name: Run test suite
+    name: Run test suite debian and variants
     runs-on: ubuntu-latest
 
     steps:
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build docker images
-      run: docker-compose build
+      run: docker-compose -f docker-compose.test.yaml build
 
     - name: Run tests
-      run: ./tests.sh
+      run: ./debian_tests.sh
