--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,7 @@
 services:
   app:
+    container_name: setup-enviroment
     image: jacksonbicalho/setup-enviroment:01-bullseye-slin
-    tty: true
-    volumes:
-      - .:/app
-
-  shellspec:
-    environment:
-      - IMAGE=${IMAGE}
-    image: "${IMAGE}"
     tty: true
     volumes:
       - .:/app
