--- a/.github/workflows/.cli.test.yml
+++ b/.github/workflows/.cli.test.yml
@@ -16,4 +16,4 @@ jobs:
       run: docker-compose -f docker-compose.test.yaml build
 
     - name: Run tests
-      run: sudo ./debian_tests.sh
+      run: ./debian_tests.sh
